@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: string.test,v 1.37.2.26 2008/10/14 20:10:50 dgp Exp $
+# RCS: @(#) $Id: string.test,v 1.37.2.27 2009/06/24 15:18:47 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -1868,6 +1868,7 @@ test string-28.13 {tcl::prefix longest} {
 
 # cleanup
 rename MemStress {}
+catch {rename foo {}}
 ::tcltest::cleanupTests
 return
 
